Added framework/draft register, resource, forgot password, and forgot username for Dale to clean up

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,9 @@
     <string name="forgot_password">Forgot Password?</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
+    <string name="send_reset">Send Reset</string>
+    <string name="avatar_picture">avatar_picture</string>
+    <string name="send_username">Send Username</string>
+    <string name="create">Create</string>
+    <string name="email">Email</string>
 </resources>
