Create Main Menu Activity and changed a couple file names for consistency
The files that were changed were MainActivity to WelcomeActivity since it would most likely be confused with the MainMenuActivity. Furthermore, the MainMenuActivity has been created/designed, but its inaccessible atm since I ran out of time for tonight.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,9 @@
     <string name="send_username">Send Username</string>
     <string name="create">Create</string>
     <string name="email">Email</string>
+    <string name="fake_call">Fake Call</string>
+    <string name="mombot">Mombot</string>
+    <string name="start_walk">Start Walk</string>
+    <string name="journal">Journal</string>
+    <string name="reporting_assistance">Reporting Assistance</string>
 </resources>
