--- a/care-corner-mobile/app/src/main/res/values/strings.xml
+++ b/care-corner-mobile/app/src/main/res/values/strings.xml
@@ -17,4 +17,11 @@
     <string name="start_walk">Start Walk</string>
     <string name="journal">Journal</string>
     <string name="reporting_assistance">Reporting Assistance</string>
+    <string name="fake_phone_call">Fake Phone Call</string>
+    <string name="call">Call</string>
+    <string name="recordings">Recordings</string>
+    <string name="settings">Settings</string>
+    <string name="name">Name</string>
+    <string name="phone">Phone</string>
+    <string name="date">Date</string>
 </resources>
