Update Variables in Fake Phone Call Menu and Start work on GUI for that feature
I added some images and connected the fake phone call activities so that they are available from the main menu as well.

--- a/care-corner-mobile/app/src/main/res/values/strings.xml
+++ b/care-corner-mobile/app/src/main/res/values/strings.xml
@@ -24,4 +24,9 @@
     <string name="name">Name</string>
     <string name="phone">Phone</string>
     <string name="date">Date</string>
+    <string name="incoming_call">Incoming Call</string>
+    <string name="caller_id">Caller ID</string>
+    <string name="send_message">Send Message</string>
+    <string name="mobile">Mobile: Phone Number Placeholder</string>
+    <string name="select_voice">Select Voice:</string>
 </resources>
