Create Dialing Activity, Implemented Fake Phone Call Menu Settings, Add Spinner functionality, Add more resource files
Sorry for the relatively large commit (I'll try in the future to create smaller commits), but this commit almost completes the Fake Phone Call Feature. Every setting that you can choose in the menu now works as it should with the exception of the voices and that's only because the recordings do not exist yet (the code to get them working exists though). Ending the fake phone call will now have an alert message asking the user to save the recording or not (and there are TODO's where those functions will eventually go)

--- a/care-corner-mobile/app/src/main/res/values/strings.xml
+++ b/care-corner-mobile/app/src/main/res/values/strings.xml
@@ -31,6 +31,12 @@
     <string name="select_voice">Select Voice:</string>
     <string name="set">Set</string>
     <string name="waiting_time">Waiting Time:</string>
+    <string name="add_call">Add call</string>
+    <string name="message">Message</string>
+    <string name="bluetooth">Bluetooth</string>
+    <string name="speaker">Speaker</string>
+    <string name="keypad">Keypad</string>
+    <string name="mute">Mute</string>
 
 
     <string-array name="spinnerWaitTime">
