--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,8 @@
     <string name="speaker">Speaker</string>
     <string name="keypad">Keypad</string>
     <string name="mute">Mute</string>
+    <string name="my_journal">My Journal</string>
+
 
 
     <string-array name="spinnerWaitTime">
