--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,7 @@
     <string name="keypad">Keypad</string>
     <string name="mute">Mute</string>
     <string name="my_journal">My Journal</string>
+    <string name="return_home">Return Home</string>
 
 
 
