journal add new entry, delete, and edit buttons template

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,9 @@
     <string name="mute">Mute</string>
     <string name="my_journal">My Journal</string>
     <string name="return_home">Return Home</string>
+    <string name="new_entry">New Entry</string>
+    <string name="delete_entry">Delete Selected Entry</string>
+    <string name="edit_entry">Edit Selected Entry</string>
 
 
 
