journal recyclerview adapter and template working correctly(not finished yet, need to change to add/delete files to it)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,8 @@
     <string name="new_entry">New Entry</string>
     <string name="delete_entry">Delete Selected Entry</string>
     <string name="edit_entry">Edit Selected Entry</string>
+    <string name="view_recycler">View Entries</string>
+   <!-- <color name="lightblue">#94CCEo</color> -->
 
 
 
