--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,6 +44,8 @@
     <string name="edit_entry">Edit Selected Entry</string>
     <string name="view_recycler">View Entries</string>
     <string name="element_text" />
+    <string name="edit_my_entry">Edit Entry</string>
+    <string name="journal_reader">Journal Reader</string>
     <!-- <color name="lightblue">#94CCEo</color> -->
 
 
