--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,7 @@
     <string name="element_text" />
     <string name="edit_my_entry">Edit Entry</string>
     <string name="journal_reader">Journal Reader</string>
+    <string name="title">Title</string>
     <!-- <color name="lightblue">#94CCEo</color> -->
 
 
