reporting recyclerview adapter, main page, and reader initial setup

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,6 +47,7 @@
     <string name="edit_my_entry">Edit Entry</string>
     <string name="journal_reader">Journal Reader</string>
     <string name="title">Title</string>
+    <string name="reporting">Reporting Assistance</string>
     <!-- <color name="lightblue">#94CCEo</color> -->
 
 
