added CC_Red color. updated UI including panic button layout. Fix Map swipe up interactions.

--- a/care-corner-mobile/app/src/main/res/values/strings.xml
+++ b/care-corner-mobile/app/src/main/res/values/strings.xml
@@ -65,5 +65,5 @@
         <item>femalevoice2.mp3</item>
     </string-array>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_blank_fragment">Panic Button is Deactivated</string>
 </resources>
