Putting main menu xml file back

--- a/care-corner-mobile/app/src/main/res/values/strings.xml
+++ b/care-corner-mobile/app/src/main/res/values/strings.xml
@@ -56,6 +56,7 @@
     <string name="save">Save</string>
     <string name="confirm_pin">Confirm Pin</string>
     <string name="numbers">Numbers</string>
+    <string name="pin">Pin</string>
     <!-- <color name="lightblue">#94CCEo</color> -->
 
 
