added functions to add and load incidents list from android storage. Currently panic button has a bootleg testing state where pressing the incident button will cycle through all the incidents saved on the device

--- a/care-corner-mobile/app/src/main/res/values/strings.xml
+++ b/care-corner-mobile/app/src/main/res/values/strings.xml
@@ -53,6 +53,7 @@
     <string name="panic_status_deactivated">Panic Mode is currently deactivated</string>
     <string name="panic_status_activated">Panic Mode is currently deactivated</string>
     <string name="incident_list_key">incidents list</string>
+    <string name="incident_report">incidents list</string>
     <!-- <color name="lightblue">#94CCEo</color> -->
 
 
