Resource location tracker

--- a/care-corner-mobile/app/src/main/res/values/strings.xml
+++ b/care-corner-mobile/app/src/main/res/values/strings.xml
@@ -62,7 +62,6 @@
     <!-- <color name="lightblue">#94CCEo</color> -->
 
 
-
     <string-array name="spinnerWaitTime">
         <item>Now</item>
         <item>15 seconds</item>
@@ -77,4 +76,5 @@
         <item>femalevoice.mp3</item>
         <item>femalevoice2.mp3</item>
     </string-array>
+    <string name="title_activity_maps">Map</string>
 </resources>
