--- a/care-corner-mobile/app/src/main/res/values/strings.xml
+++ b/care-corner-mobile/app/src/main/res/values/strings.xml
@@ -50,6 +50,7 @@
     <string name="emergency_contact_number">Emergency Contact Number</string>
     <string name="emergency_contact_name">Emergency Contact Name</string>
     <string name="below_are_optional">Below are optional</string>
+    <string name="save">Save</string>
     <!-- <color name="lightblue">#94CCEo</color> -->
 
 
