Main menu now has settings and panic button not complete

--- a/care-corner-mobile/app/src/main/res/values/strings.xml
+++ b/care-corner-mobile/app/src/main/res/values/strings.xml
@@ -51,6 +51,7 @@
     <string name="emergency_contact_name">Emergency Contact Name</string>
     <string name="below_are_optional">Below are optional</string>
     <string name="save">Save</string>
+    <string name="panic_button">Panic Button</string>
     <!-- <color name="lightblue">#94CCEo</color> -->
 
 
